[REST] [PROFILES] A new annotation can expose join profiles for the @Rest API. It is available for Select, Upsert and Delete. The join profiles are set on the query and then on the JSON directive to serialize the output. A new schema is added for the OpenAPI description and the 'joinProfile' parameter.
